force-app/main/default/objects/MigrationFieldMapping__c/MigrationFieldMapping__c.object-meta.xml
<CustomObject>
    <description>Source-to-target field mapping for one column within an object config. Stores transformation type, validation rules, and parent lookup resolution config.</description>
    <label>Migration Field Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>