force-app/main/default/objects/MigrationFieldMapping__c/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName>
    <description>Applied to the source row when the source value is blank or null. Applied before the IsRequired check and before transformation.</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>