force-app/main/default/objects/MigrationFieldMapping__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive mappings are ignored at runtime. Use to temporarily disable a mapping without deleting it.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>