force-app/main/default/objects/MigrationFieldMapping__c/fields/IsExternalIdField__c.field-meta.xml
<CustomField>
    <fullName>IsExternalIdField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this field is the configured upsert key for the parent object config. Validated as unique in insert mode by the duplicate detector.</description>
    <label>Is External ID Field</label>
    <type>Checkbox</type>
</CustomField>