force-app/main/default/objects/MigrationFieldMapping__c/fields/IsParentLookup__c.field-meta.xml
<CustomField>
    <fullName>IsParentLookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this field holds a legacy parent ID that must be resolved via MigrationRecordLog__c before DML. Requires ParentObjectApiName to be populated.</description>
    <label>Is Parent Lookup</label>
    <type>Checkbox</type>
</CustomField>