force-app/main/default/objects/MigrationFieldMapping__c/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pre-validation raises a RequiredFieldMissing error if the source value is null or empty after DefaultValue is applied. Set true for fields that are required by validation rules even if not system-required.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>