force-app/main/default/objects/MigrationFieldMapping__c/fields/MigrationObjectConfig__c.field-meta.xml
<CustomField>
    <fullName>MigrationObjectConfig__c</fullName>
    <label>Migration Object Config</label>
    <referenceTo>MigrationObjectConfig__c</referenceTo>
    <relationshipLabel>Migration Field Mappings</relationshipLabel>
    <relationshipName>MigrationFieldMappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>