force-app/main/default/objects/MigrationFieldMapping__c/fields/ParentObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectApiName__c</fullName>
    <description>API name of the parent object whose MigrationRecordLog entries should be queried to resolve this lookup field. Required when IsParentLookup is true.</description>
    <label>Parent Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>