force-app/main/default/objects/MigrationFieldMapping__c/fields/SequenceOrder__c.field-meta.xml
<CustomField>
    <fullName>SequenceOrder__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Processing order for Concatenate transformations. Fields with lower SequenceOrder are concatenated first.</description>
    <label>Sequence Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>