force-app/main/default/objects/MigrationFieldMapping__c/fields/SourceFieldName__c.field-meta.xml
<CustomField>
    <fullName>SourceFieldName__c</fullName>
    <description>Column name in the source data (CSV header, JSON key, CRM field name). Case-sensitive match against the source row during batch processing.</description>
    <label>Source Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>