force-app/main/default/objects/MigrationFieldMapping__c/fields/TargetFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>TargetFieldApiName__c</fullName>
    <description>Salesforce field API name on the target object. Validated against live DescribeSObject at job start.</description>
    <label>Target Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>