force-app/main/default/objects/MigrationFieldMapping__c/fields/TargetFieldLength__c.field-meta.xml
<CustomField>
    <fullName>TargetFieldLength__c</fullName>
    <description>Maximum character length from DescribeFieldResult. Used by the schema validator to raise FieldTooLong errors before DML.</description>
    <label>Target Field Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>