force-app/main/default/objects/MigrationFieldMapping__c/fields/TransformationConfig__c.field-meta.xml
<CustomField>
    <fullName>TransformationConfig__c</fullName>
    <description>JSON config for the selected TransformationType. Examples — PicklistMap: {"New":"New_Lead","Active":"Active__c"} | DateFormat: {"from":"MM/DD/YYYY","to":"YYYY-MM-DD"} | StaticValue: {"value":"Standard"} | Truncate: {"maxLength":255}</description>
    <label>Transformation Config</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>