force-app/main/default/objects/MigrationFieldMapping__c/fields/TransformationType__c.field-meta.xml
<CustomField>
    <fullName>TransformationType__c</fullName>
    <label>Transformation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
                <default>true</default>
                <label>Direct (copy as-is)</label>
            </value>
            <value>
                <fullName>StaticValue</fullName>
                <label>Static Value</label>
            </value>
            <value>
                <fullName>DateFormat</fullName>
                <label>Date Format Conversion</label>
            </value>
            <value>
                <fullName>PicklistMap</fullName>
                <label>Picklist Value Map</label>
            </value>
            <value>
                <fullName>Concatenate</fullName>
                <label>Concatenate Fields</label>
            </value>
            <value>
                <fullName>Truncate</fullName>
                <label>Truncate to Length</label>
            </value>
            <value>
                <fullName>Nullify</fullName>
                <label>Always Null</label>
            </value>
            <value>
                <fullName>ExternalIdLookup</fullName>
                <label>External ID Lookup (parent FK)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>